--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Template HTML de base</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="template.css">
   </head>
   <body>
     <h1 id="#coucou" class="swag2poule">Coucou!</h1>
     <p class="swag2poule">Vive internet!</p>
-
+    <div class="ombre" data-tilt>bonnnnn</div>
     <script src="sript.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.js"></script>
   </body>
 </html>
